# app/Http/Controllers/UserController.php
@@ -2,10 +2,12 @@
 
 namespace App\Http\Controllers;
 
+use App\Exceptions\MsgException;
 use App\Models\Job;
 use App\Models\JobApply;
 use App\Models\JobCompleted;
 use App\Models\JobEvaluate;
+use App\Models\RealNameVerification;
 use App\Models\Resume;
 use App\Models\Uploadfile;
 use App\Models\User;
@@ -17,15 +19,13 @@ use Validator;
 class UserController extends Controller {
 
     public function __construct() {
-          $this->middleware('jwt.auth', ['except' => ['show','mainPage']]);
-          $this->middleware('user.access', ['except' => ['show', 'query','mainPage']]);//用户角色验证
-
-
-          $this->middleware('role:admin', ['only' => ['query']]);//管理员角色
+        $this->middleware('jwt.auth', ['except' => ['show', 'mainPage']]);
+        $this->middleware('user.access', ['only' => ['update']]);//用户角色验证
     }
 
     public function show($id) {
         $user = User::findOrFail($id);
+        $user->avatar = Uploadfile::convertToUrl($user->avatar);
         return response()->json($user);
     }
 
@@ -267,6 +267,7 @@ class UserController extends Controller {
         if ($avatar) {
             $uploadFile = Uploadfile::where('path', $avatar)->first();
             $uploadFile->makeSureAccess($user);
+            $uploadFile->replace($user->avatar);
         }
 
         $user->update(array_only($request->all(),
@@ -276,40 +277,50 @@ class UserController extends Controller {
         return response()->json($user);
     }
 
-    public function query(Request $request) {
+    public function getRealNameApplies() {
+        $self = JWTAuth::parseToken()->authenticate();
+        $rnvs = RealNameVerification::where('user_id', $self->id)
+            ->orderBy('updated_at', 'desc')
+            ->get();
+        $rnvs->each(function ($rnv) {
+            $rnv->verifi_pic = Uploadfile::convertToUrl($rnv->verifi_pic);
+        });
+        return response()->json($rnvs);
+    }
+
+    public function createRealNameApplies(Request $request) {
         $this->validate($request, [
-            'kw' => 'string',
-            'siz' => 'integer|min:0',
-            'dir' => 'in:asc,desc',
-            'off' => 'integer|min:0'
+            'real_name' => 'required|string|max:16',
+            'id_number' => 'required|string|max:24',
+            'verifi_pic' => 'required|exists:uploadfiles,path'
         ]);
 
-        $q = $request->input('kw', '');
-        $direction = $request->input('dir', 'asc');
-        $offset = $request->input('off', 0);
-        $limit = $request->input('siz', 20);
+        $verifi_pic = $request->input('verifi_pic');
 
-        $q_array = $q ? explode(" ", trim($q)) : [];
-        $builder = User::query();
-        foreach ($q_array as $qi) {
-            $builder->where(function ($query) use ($qi) {
-                $query->orWhere('nickname', 'like', '%' . $qi . '%')
-                    ->orWhere('email', 'like', '%' . $qi . '%');
-            });
-        }
+        $self = JWTAuth::parseToken()->authenticate();
+        $self->checkNeedRealNameVerify();
 
-        $total = $builder->count();
+        $uploadFile = Uploadfile::where('path', $verifi_pic)->first();
+        $uploadFile->makeSureAccess($self);
+        $uploadFile->replace();
 
-        $builder->orderBy('id', $direction);
-        $builder->skip($offset);
-        $builder->limit($limit);
+        $rnv = RealNameVerification::create([
+            'user_id' => $self->id,
+            'user_name' => $self->nickname,
+            'real_name' => $request->input('real_name'),
+            'id_number' => $request->input('id_number'),
+            'verifi_pic' => $uploadFile->path,
+        ]);
 
-        $users = $builder->get();
+        return response()->json($rnv);
+    }
 
-        $users->each(function ($user) {
-            $user->setHidden(['password']);
-        });
-
-        return response()->json(['total' => $total, 'list' => $users]);
+    public function deleteRealNameApply($id) {
+        $self = JWTAuth::parseToken()->authenticate();
+        $rnv = RealNameVerification::where('user_id', $self->id)->findOrFail($id);
+        if ($rnv->is_examined != 0) throw new MsgException('你只能取消未处理的申请。', 400);
+        $rnv->is_examined = 3;
+        $rnv->save();
+        return response()->json($rnv);
     }
 }
